--- a/user-service.yml
+++ b/user-service.yml
@@ -27,6 +27,32 @@ server:
   port: 84
 ---
 spring:
+  profiles: db1
+  application:
+    name: userService
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.1.66:3307/microcloud01?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: rootFwtai
+server:
+  port: 990
+---
+spring:
+  profiles: db2
+  application:
+    name: userService
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.1.66:3307/microcloud02?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: rootFwtai
+server:
+  port: 991
+---
+spring:
   profiles: uat
   application:
     name: userService
