--- a/scc.yml
+++ b/scc.yml
@@ -15,8 +15,8 @@ spring:
 server:
   port: 820
 girl:
-  name: hg5l
-  age: 185
+  name: hgl
+  age: 19
 ---
 spring:
   profiles: refresh
@@ -25,15 +25,5 @@ spring:
 server:
   port: 8022
 girl:
-  name: 田卓5智
-  age: 158
----
-spring:
-  profiles: test
-  application:
-    name: sccService
-server:
-  port: 830
-girl:
-  name: hgl
-  age: 36
+  name: 田卓智
+  age: 18
